styles/styles.css
:root { /* CONSTANTS */
    --main: #b100e8;
    --accent: #d100d1;
    --mid: #bc00dd;
    --dark_gray: #181818;
    --dark: #222;
    --radius: 6px;
    --margin_left: 32px;
}

html {
    height: 100%;
    /*background: var(--dark_gray);*/
    /*background: radial-gradient(ellipse at bottom, #333333 0%, #181818 100%);*/
    background: url("../assets/images/background.jpg");
    background-size:cover;
    overflow: hidden;
}

body {
    font-family: monospace, serif;
    display: flex;
    flex-direction: column;
    margin: 0;
    padding: 0;
    overflow-y: auto;
    overflow-x: hidden;
    color: white;
}

h1 {
    font-size: 2.4em;
    justify-content: left;
    margin: 0
}

h2 {
    font-size: 1.9em;
    margin: 0
}

p {
    font-size: 16px;
}

ion-icon {
    vertical-align: middle;
}

ion-icon[size=large] {
    zoom: 0.7;
}

::-webkit-scrollbar {
    width: 6px;
}

::-webkit-scrollbar-track {
    background: transparent;
}

::-webkit-scrollbar-thumb {
    background: #888;
    border-radius: 6px;
}

::-webkit-scrollbar-thumb:hover {
    background: var(--main);
}

.content {
    margin-left: 95px;
    width: calc(100% - 95px);
    scroll-margin-left: 95px;
    scroll-margin-top: 0;
    position: absolute;
    overflow: auto;
    display: inline-flex;
    height: 100%;
}

.navbar {
    height: 100%;
    overflow: hidden;
    margin-right: 32px;
    position: fixed;
    width: 60px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    top: 100%;
}

.nav-animated {
    transition: all .8s ease;
    top: 0;
}

@keyframes slideUp {
    0% { transform: translateY(100%); }
    100% { transform: translateY(0); }
}

@-webkit-keyframes slideLeft {
    0% { left: 100%; }
    100% { left: 0; }
}

.nav-placeholder {
    height: 35%;
}

.nav-buttons {
    height: 15%;
    display: block;
    text-align: center;
    box-sizing: border-box;
    -webkit-font-smoothing: antialiased;
}

.nav-item a, .active-item a {
    display: block;
    text-align: center;
    text-decoration: none;
    font-size: 8px;
    width: 100%;
    margin-bottom: 8px;
    line-height: 36px;
    height: 36px;
    position: relative;
    cursor: pointer;
}

.nav-item a ion-icon {
    transition: 0.3s ease-out;
    color: white;
}

.nav-item a span, .active-item a span {
    opacity: 0;
    z-index: 1;
    font-weight: lighter;
    transition: 0.3s opacity;
    color: var(--accent);
    margin-top: -32px;
    text-decoration: none;
    display: block;
}

.nav-item a:hover ion-icon, .nav-item a:hover ion-icon:hover {
    opacity: 0;
    color: var(--accent);
}

.nav-item a:hover span, .active-item a:hover span {
    color: var(--mid);
    opacity: 1;
}

.active-item a ion-icon {
    color: var(--mid) !important;
    transition: 0.3s ease-out;
}

.active-item a:hover ion-icon, .nav-item a:hover ion-icon:hover {
    opacity: 0;
    color: var(--mid);
}

.links {
    height: 20%;
    width: 100%;
}

.link-item a {
    text-align: center;
    color: #909096;
    width: 100%;
    cursor: pointer;
    padding: 6px 0;
    display: block;
    font-size: 15px;
    line-height: 16px;
}

.link-item a:hover {
    color: var(--accent)
}

.page-header-container {
    display: inline-flex;
    width: 100%;
    animation: bounce;
    animation-duration: 2s;
}

.page-header-container ion-icon {
    padding: 0 8px;
    height: 1.3em;
    zoom: 1;
}

.page-header-container div, .page-header h1, .page-header h1 a {
    display: block;
    width: calc(100% - 1.3em - 8px);
}

.index, .about, .skills, .portfolio, .contact {
    display: block;
    margin: 0;
    height: 50%;
    padding: 0;
}

.content-animated {
    transform: translate(0, 50%);
    transition: all .8s ease;
}

.index, .about, .skills, .contact {
    width: 45%;
}

div .text-zone {
    width: calc(100% - var(--margin_left) - 16px);
    padding: 16px 0 0;
    margin: 0 16px 0 48px;
}

 .text-zone p {
     margin: 0 0 12px 0;
     width: 100%;
 }

.text-zone p a {
    text-decoration: none;
    color: var(--main);
}

.text-zone p a:hover {
    color: lightpink;
}

.media {
    flex-grow: 1;
}

.media-animated {
    animation: slideUp .8s ease forwards;
    transition: all .8s ease;
}

#animated-title {
    text-decoration: none;
    color: var(--main);
}

#animated-title:hover:after {
    white-space: pre;
    content: "\A Nkansah-Badu";
}

.skills h2 {
    margin-top: 16px;
    padding-top: 16px;
}

.skills .text-zone ul {
    list-style-type: none;
    padding: 0;
}

.skills .text-zone li {
    font-size: 16px;
    list-style-type: none;
    margin-bottom: 12px;
}

.skills .text-zone p {
    margin: 0;
}

#dev-tools {
    margin-top: 12px;
}

.portfolio {
    width: 100%;
}

.portfolio p {
    margin-left: 48px;
    font-size: 16px;
}

.flat-button, input[type=submit] {
    color: var(--main);
    font-size: 13px;
    background: transparent;
    border: 1px solid var(--main);
    text-decoration: none;
    text-align: center;
    margin-left: 48px;
    float: right;
    cursor: pointer;
    margin-top: 32px;
    padding: 10px 18px;
    transition: all 0.3s;
}

.flat-button:hover, input[type=submit]:hover {
    color: var(--dark);
    background: var(--accent);
}

.contact-form {
    width: 100%;
    display: block;
}

.contact-form .row {
    display: inline-flex;
    width: 100%;
    margin-right: 8px;
}

#captcha-row {
    width: 100%;
    display: inline-flex;
    margin: 8px 0 0;
}

#captcha-container {
    width: 70%;
}

#form-submit {
    width: 30%;
    height: 100%;
    margin: 0;
    -webkit-transform: translateY(100%);
    transform: translateY(100%);
}

input[type=text], input[type=email]{
    width: 100%;
    border: 0;
    background: #515151;
    height: 50px;
    font-size: 16px;
    color: #111111;
    padding: 0 20px;
    box-sizing: border-box;
    cursor: text;
    margin-top: 8px;
    font-family: monospace;
}

#contact-name {
    margin-right: 4px;
    margin-top: 0;
}

#contact-email {
    margin-left: 4px;
    margin-top: 0;
}

.contact-form textarea {
    width: 100%;
    border: 0;
    background: #515151;
    height: 50px;
    font-size: 16px;
    color: #111111;
    padding: 20px;
    box-sizing: border-box;
    min-height: 200px;
    overflow: auto;
    margin-top: 8px;
    font-family: monospace;
    resize: none;
}

